# clienthub-backend

./: .env.example  .gitignore  .htpasswd  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
alembic/: env.py  script.py.mako
alembic/versions/: 2024_12_05_1549-626e853a26c5_.py  2024_12_05_1553-a558d8b83486_.py
nginx/: nginx.conf
src/: __main__.py
src/admin_views/: __init__.py  feedback_about_client.py  legal_entity.py  payments.py  user.py
src/api/: __init__.py  feedback.py  legal_entity.py  payments.py  ping.py  user.py
src/config/: __init__.py  default.py  utils.py
src/db/connection/: __init__.py  session.py
src/db/models/: __init__.py  base.py  feedback_about_client.py  legal_entity.py  payments.py  user.py
src/schemas/: __init__.py  feedback_about_client.py  legal_entity.py  payments.py  user.py
src/utils/feedback/: __init__.py  database.py
src/utils/health_check/: __init__.py
src/utils/legal_entity/: __init__.py  business_logic.py  database.py
src/utils/user/: __init__.py  business_logic.py  database.py
