[tool.poetry]
name = "pythonproject21"
version = "0.1.0"
description = ""
authors = ["DeniMalt <deniska_maltsev_04@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.101.0"
fastapi-pagination = "^0.12.4"
passlib = "^1.7.4"
aiohttp = "^3.8.1"
pydantic = { extras = ["dotenv", "email"], version = "^2.6.1" }
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
starlette = "^0.27.0"
url-normalize = "^1.4.3"
bcrypt = "4.0.1"
uvicorn = "^0.22.0"
gunicorn = "^21.0.1"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
pydantic_settings = "^2.1.0"
alembic = "^1.8.1"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.3"
fastapi-mail = "^1.3.1"
asyncpg = "^0.30.0"
yookassa = "^2.5.0"
starlette_admin = "^0.14.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.6.0"
ConfigArgParse = "^1.5.3"
httpx = "^0.23.0"
isort = "^5.10.1"
mock = "^4.0.3"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^3.0.0"
sqlalchemy2-stubs = "^0.0.2-alpha.24"
watchfiles = "^0.16.1"
dill = "^0.3.8"
wrapt = "^1.16.0"

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114", # missing-module-docstring
  "C0116", # missing-function-docstring
  "R0903", # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115", # missing-class-docstring (for api routes)
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
